[package]
name = "imaginator-plugins-base"
version = "0.1.0"
authors = ["Błażej Święcicki <blazej.swiecicki@pixers.pl>"]

[dependencies]
imaginator-common = { path = "../../common" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "*"
hyper-tls = "0.1.3"
hyper = "=0.11.9"
lru-disk-cache = "^0.1"
rust-crypto = "^0.2"
futures = "0.1.14"
failure = "0.1"
zip = "0.3.1"
lazy_static = "*"
byteorder = "1.2.3"
